# GithubCppProjectTemplate

./: .coafile  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/: run_lint.sh  run_test.sh  script.sh
doc/: Doxyfile  index.md
doc/developer/: dev_doc.md
doc/source/: conf.py  index.rst
doc/user/: user_doc.md
examples/: CMakeLists.txt  simple_example.cpp
scripts/: upload_coverage.sh
src/: CMakeLists.txt  HelloWorldPrinter.cpp  HelloWorldPrinter.h
test/: CMakeLists.txt  FirstUnitTest.cpp
